// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer > renders with as correctly 1`] = `
"<section data-slot="root" class="">
  <!--v-if-->
  <div class="" data-slot="container">
    <div data-slot="right" class=""></div>
    <div data-slot="center" class=""></div>
    <div data-slot="left" class=""></div>
  </div>
  <!--v-if-->
</section>"
`;

exports[`Footer > renders with bottom slot correctly 1`] = `
"<footer data-slot="root" class="">
  <!--v-if-->
  <div class="" data-slot="container">
    <div data-slot="right" class=""></div>
    <div data-slot="center" class=""></div>
    <div data-slot="left" class=""></div>
  </div>
  <div data-slot="bottom" class="">Bottom slot</div>
</footer>"
`;

exports[`Footer > renders with class correctly 1`] = `
"<footer data-slot="root" class="relative">
  <!--v-if-->
  <div class="" data-slot="container">
    <div data-slot="right" class=""></div>
    <div data-slot="center" class=""></div>
    <div data-slot="left" class=""></div>
  </div>
  <!--v-if-->
</footer>"
`;

exports[`Footer > renders with default slot correctly 1`] = `
"<footer data-slot="root" class="">
  <!--v-if-->
  <div class="" data-slot="container">
    <div data-slot="right" class=""></div>
    <div data-slot="center" class="">Default slot</div>
    <div data-slot="left" class=""></div>
  </div>
  <!--v-if-->
</footer>"
`;

exports[`Footer > renders with left slot correctly 1`] = `
"<footer data-slot="root" class="">
  <!--v-if-->
  <div class="" data-slot="container">
    <div data-slot="right" class=""></div>
    <div data-slot="center" class=""></div>
    <div data-slot="left" class="">Left slot</div>
  </div>
  <!--v-if-->
</footer>"
`;

exports[`Footer > renders with right slot correctly 1`] = `
"<footer data-slot="root" class="">
  <!--v-if-->
  <div class="" data-slot="container">
    <div data-slot="right" class="">Right slot</div>
    <div data-slot="center" class=""></div>
    <div data-slot="left" class=""></div>
  </div>
  <!--v-if-->
</footer>"
`;

exports[`Footer > renders with top slot correctly 1`] = `
"<footer data-slot="root" class="">
  <div data-slot="top" class="">Top slot</div>
  <div class="" data-slot="container">
    <div data-slot="right" class=""></div>
    <div data-slot="center" class=""></div>
    <div data-slot="left" class=""></div>
  </div>
  <!--v-if-->
</footer>"
`;

exports[`Footer > renders with ui correctly 1`] = `
"<footer data-slot="root" class="">
  <!--v-if-->
  <div class="lg:gap-x-1.5" data-slot="container">
    <div data-slot="right" class=""></div>
    <div data-slot="center" class=""></div>
    <div data-slot="left" class=""></div>
  </div>
  <!--v-if-->
</footer>"
`;
